# polymarket-predictions-tally

./: .gitignore  FUTURE_README.md  README.md  TODO.md  example_event.json  example_market1.json  fixed.json  pyproject.toml  test.json
database/: clear.sql  get_all_responses.sql  get_responses_to_question.sql  get_user.sql  get_user_id_by_username.sql  has_user_answered.sql  init_db.sh  insert_question.sql  insert_response.sql  insert_user.sql  is_question_in_db.sql  list_questions_id.sql  remove_user.sql  setup.sql  update_response.sql  update_user.sql  update_user_stats.sql
polymarket_predictions_tally/: api.py  cli.py  constants.py  database.py  initialization.py  integration.py  logic.py  main.py  utils.py
polymarket_predictions_tally/cli/: command.py  prints.py  user_input.py
polymarket_predictions_tally/config/: config.toml
polymarket_predictions_tally/database/: read.py  utils.py  write.py
polymarket_predictions_tally/queries/: get_all_user_positions.sql  get_positions_on_question.sql  get_question_from_id.sql  get_stats.sql  get_user_position.sql  has_user_answered.sql  insert_default_stats.sql  insert_question.sql  insert_response.sql  insert_transaction.sql  insert_user_by_name.sql  list_active_questions.sql  remove_position.sql  remove_question.sql  setup.sql  update_response.sql  update_user_budget.sql  upsert_position.sql
tests/: test_api.py  test_database.py  test_database_edit_question.py
tests/cli/: test_get_amount.py  test_get_response.py  test_get_transaction.py  test_process_bet.py  test_process_prediction.py  test_prompt_for_response.py  (+3 more)
(+30 files in other folders)
