[tool.poetry]
name = "polymarket-predictions-tally"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
sqlite-utils = "^3.38"
pandas = "^2.2.3"
click = "^8.1.8"
pytest = "^8.3.4"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
polytally = "polymarket_predictions_tally.cli.command:cli"
